[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/SimpleEnemy/SimpleEnemy.gd" type="Script" id=1]
[ext_resource path="res://HUD/Enemy/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collision/HurtBox/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Light & Shadows/Shadows/SmallShadow.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Bat/Bat-sheet.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Bat/BloodMaterial.tres" type="Material" id=8]
[ext_resource path="res://Collision/SoftCollision/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music and Sounds/Hurt.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_animation_finished"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Flying"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 8.76427

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.12132
height = 2.0

[sub_resource type="CircleShape2D" id=5]
radius = 78.0064

[sub_resource type="CircleShape2D" id=6]
radius = 5.87633

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 50, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.125, 0 )
texture = ExtResource( 7 )
offset = Vector2( 0, -15 )
hframes = 9

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Flying = SubResource( 2 )

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 8 )

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -19 )
collision_layer = 2147483656

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="Stats" parent="HealthBar" index="0"]
max_health = 25

[node name="FlashTimer" type="Timer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.898039, 0, 0, 0.615686 )
self_modulate = Color( 1, 0, 0, 0.341176 )
shape = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -17 )
collision_mask = 32

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 6 )

[node name="BloodParticles" type="Particles2D" parent="."]
material = ExtResource( 8 )
position = Vector2( 0, -4 )
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 3.0
explosiveness = 0.15
randomness = 1.0
visibility_rect = Rect2( 0, 0, 0, 24.9532 )
process_material = SubResource( 7 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="HealthBar/Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]

[editable path="SoftCollision"]

[editable path="Hurtbox"]

[editable path="HealthBar"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
